<resources>
    <string name="app_name">Design Thinking Methods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!--    General    -->
    <string name="take_a_look">Conhecer</string>

    <!--    Home    -->
    <string name="home_main_button">Let\'s start</string>
    <string name="home_presentation_text">Aqui vamos conhecer alguns métodos de Design Thinking. Dividido em sete passos para facilitar a  leitura e entendimento de cada um dos métodos.</string>

    <!--    Briefing    -->
    <string name="briefing_first_method">Primeiro Método</string>
    <string name="briefing_title">Briefing</string>

    <!--    Research    -->
    <string name="research_title">Pesquisa</string>

    <!--    Ideation    -->
    <string name="ideation_title">Ideação</string>

    <!--    Prototype    -->
    <string name="protorype_title">Prototipagem</string>

    <!--    Selection of ideas    -->
    <string name="selection_of_ideas_title">Seleção de ideias</string>

    <!--    Implementation    -->
    <string name="implementation_title">Implementação</string>

    <!--    Aprendizagem    -->
    <string name="learning_title">Aprendizagem</string>
    <string name="menu_back">__</string>
</resources>